# flaskProjectSonarQubeFalsePositive

./: .gitignore  app.py  pyproject.toml  requirements.txt
src/sonarqube_expl/: app.py
