[project]
name = "_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Harry Hartmann", email="hry@solaris-it.com" },
]
description = "A bug example SonarQuebe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Harry Hartmann <hry@solaris-it.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
